--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -7,8 +7,6 @@
     <meta charset="utf-8">
     <!-- 网站标题 -->
     <title>登录</title>
-    <!-- 引入bootstrap的css文件 -->
- <!-- Header部分 -->
     {% load staticfiles %}
     <!-- 引入bootstrap的css文件 -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
@@ -25,7 +23,7 @@
     <div class="container">
         <!-- 导航栏商标 -->
         <div>
-            <a class="navbar-brand" href="../templates/index.html">个人博客</a>
+            <a class="navbar-brand" href="./index.html">个人博客</a>
         </div>
     </div>
     <div class="navbar-collapse">
@@ -37,16 +35,17 @@
         <div class="col-12">
             <div class="col-6">
                 <form class="login" id="login_form" method="POST">
+                    {%  csrf_token %}
                     <div class="form-group">
                         <label for="id_login">账号: </label>
                         <input type="text" name="mobile" placeholder="请输入手机号" autofocus="autofocus" required id="id_login" class="form-control" v-model="mobile" @blur="check_mobile"/>
-                        <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register' %}" style="color: cornflowerblue; ">注册新账号</a>
+                        <small class="form-text text-muted ml-1">还没有账号？<a href="{% url 'users:register'  %}" style="color: cornflowerblue; ">注册新账号</a>
                         </small>
                     </div>
                     <div class="form-group mb-1">
                         <label for="id_password">密码:</label>
                         <input type="password" name="password" placeholder="请输入密码" required id="id_password" class="form-control" v-model="password" @blur="check_password"/>
-                        <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text" href="./forget_password.html">忘记密码?</a>
+                        <small class="form-text text-muted ml-1"><a class="secondaryAction layui-text" href="{% url 'users:forgetpassword'%}">忘记密码?</a>
                         </small>
                     </div>
                     <div class="custom-control custom-checkbox mb-2">
@@ -70,6 +69,7 @@
 
 </div>
 <!-- 引入js -->
+    <!-- Footer部分 -->
     <script type="text/javascript" src="{% static 'js/host.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/common.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
